# E-Inv

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml
common/: pyproject.toml
common/einv_common/: __init__.py  celery_client.py  config.py  exceptions.py
common/einv_common/db/: __init__.py  session.py
common/einv_common/models/: __init__.py  audit.py  document.py  extraction.py  hitl.py  tenant.py  training.py  user.py  webhook.py
common/einv_common/schemas/: __init__.py  common.py  document.py  extraction.py  hitl.py  tenant.py  training.py
common/einv_common/storage/: __init__.py  minio_client.py
docs/: stage5-core-api-hardening.md
docs/superpowers/plans/: 2026-06-19-stage5-core-api-hardening.md
docs/superpowers/specs/: 2026-05-24-einvoice-ocr-design.md  2026-06-19-stage5-core-api-hardening-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_stage5_hardening.py
nginx/: nginx.conf
plan/: Logistics-Invoice-Hybrid-OCR-plan.md
requirements/: admin-api.txt  base.txt  core-api.txt  ocr-worker.txt  training.txt
services/admin-api/: Dockerfile
services/admin-api/app/: auth_utils.py  deps.py  main.py  management.py
services/core-api/: Dockerfile
services/core-api/app/: dependencies.py  main.py  ratelimit.py
services/ocr-worker/: Dockerfile  celery_app.py  tasks.py
services/ocr-worker/pipeline/: __init__.py  (+14 more)
training/annotation/: label_schema.json
training/scripts/: evaluate_model.py  generate_finetune_config.py  prepare_dataset.py  promote_schema.py  push_model.py
(+10 files in other folders)
