[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "einv-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiobotocore>=2.13",
    "structlog>=24.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["einv_common*"]
